--- a/.github/workflows/windows-test-manual.yml
+++ b/.github/workflows/windows-test-manual.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Run the regression tests (make test)
         shell: cmd
         run: |
-          set SHELL=cmd.exe
+          set SHELL=C:\Windows\system32\cmd.EXE
           make -d test QUIET=1
 
       - name: Test that the samples can be built (make samples)
