--- a/.github/workflows/windows-test-manual.yml
+++ b/.github/workflows/windows-test-manual.yml
@@ -35,13 +35,11 @@ jobs:
 
       - name: Build the platform libraries (make lib)
         shell: cmd
-        run: make lib QUIET=1 SHELL=cmd
+        run: make -d -j2 lib QUIET=1 SHELL=cmd
 
       - name: Run the regression tests (make test)
-        #shell: cmd
-        #run: make test QUIET=1 SHELL=cmd
-        shell: pwsh
-        run: make -d test QUIET=1 SHELL=C:\Program Files\PowerShell\7\pwsh.EXE
+        shell: cmd
+        run: make test QUIET=1 SHELL=cmd
 
       - name: Test that the samples can be built (make samples)
         shell: cmd
