--- a/.github/workflows/windows-test-manual.yml
+++ b/.github/workflows/windows-test-manual.yml
@@ -1,11 +1,10 @@
-name: Windows Test Manual
-# Manually dispatched because it's much slower than the Linux test.
+name: Windows Test Caching
 
-#on:
-#  workflow_dispatch:
-
-# to test
-on: [pull_request]
+on:
+  #schedule:
+  #  - cron: '0 0 */5 * *'
+  workflow_dispatch:
+    # Allow manual dispatch.
 
 jobs:
   build_windows:
@@ -13,34 +12,59 @@ jobs:
     runs-on: windows-latest
 
     steps:
+      - name: Create Cache
+        shell: bash
+        run: mkdir cache-sha
+
+      - name: Cache SHA
+        uses: actions/cache@v3
+        id: check-sha
+        with:
+          path: .cache-sha
+          key: cache-sha-wintest-${{ github.sha }}
+          
       - name: Git Setup
+        if: steps.check-sha.outputs.cache-hit != 'true'
         shell: bash
         run: git config --global core.autocrlf input
 
       - name: Checkout source
+        if: steps.check-sha.outputs.cache-hit != 'true'
         uses: actions/checkout@v3
 
       - name: Add msbuild to PATH
+        if: steps.check-sha.outputs.cache-hit != 'true'
         uses: microsoft/setup-msbuild@v1.1
 
       - name: Build app (MSVC debug)
+        if: steps.check-sha.outputs.cache-hit != 'true'
         run: msbuild src\cc65.sln -t:rebuild -property:Configuration=Debug
 
       - name: Build app (MSVC release)
+        if: steps.check-sha.outputs.cache-hit != 'true'
         run: msbuild src\cc65.sln -t:rebuild -property:Configuration=Release
 
       - name: Build utils (MinGW)
+        if: steps.check-sha.outputs.cache-hit != 'true'
         shell: cmd
         run: make -j2 util SHELL=cmd
 
       - name: Build the platform libraries (make lib)
+        if: steps.check-sha.outputs.cache-hit != 'true'
         shell: cmd
         run: make lib QUIET=1 SHELL=cmd
 
       - name: Run the regression tests (make test)
+        if: steps.check-sha.outputs.cache-hit != 'true'
         shell: cmd
         run: make test QUIET=1 SHELL=cmd
 
       - name: Test that the samples can be built (make samples)
+        if: steps.check-sha.outputs.cache-hit != 'true'
         shell: cmd
         run: make -j2 samples SHELL=cmd
+
+      - name: Delete cache if failed
+        if: failure()
+        shell: bash
+        run: rmdir .cache-sha
