--- a/.github/workflows/windows-test-manual.yml
+++ b/.github/workflows/windows-test-manual.yml
@@ -5,6 +5,8 @@ on:
   #  - cron: '0 0 */5 * *'
   workflow_dispatch:
     # Allow manual dispatch.
+  # also pull request
+  [pull request]
 
 jobs:
   build_windows:
