--- a/.github/workflows/windows-test-manual.yml
+++ b/.github/workflows/windows-test-manual.yml
@@ -62,7 +62,7 @@ jobs:
         # without -j2 is fine
         #run: make lib QUIET=1 SHELL=cmd
         # attempt without quiet?
-        run: make lib -j2 SHELL=cmd
+        run: make -j2 lib SHELL=cmd
 
       - name: Run the regression tests (make test)
         if: steps.check-sha.outputs.cache-hit != 'true'
@@ -73,8 +73,3 @@ jobs:
         if: steps.check-sha.outputs.cache-hit != 'true'
         shell: cmd
         run: make -j2 samples SHELL=cmd
-
-      - name: Delete cache if failed
-        if: failure()
-        shell: bash
-        run: rmdir .cache-sha
